--- a/vessel-graphql-java/pom.xml
+++ b/vessel-graphql-java/pom.xml
@@ -9,7 +9,8 @@
   <url>http://maven.apache.org</url>
 
   <properties>
-  <kotlin.version>1.2.41</kotlin.version>
+      <kotlin.version>1.2.41</kotlin.version>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
     <dependency>
@@ -50,6 +51,23 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
+      <dependency>
+          <groupId>org.jetbrains.kotlin</groupId>
+          <artifactId>kotlin-reflect</artifactId>
+          <version>${kotlin.version}</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-stdlib -->
+      <dependency>
+          <groupId>org.jetbrains.kotlin</groupId>
+          <artifactId>kotlin-stdlib</artifactId>
+          <version>${kotlin.version}</version>
+      </dependency>
+
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>5.1.46</version>
+      </dependency>
 
   </dependencies>
 
